fix: add native access to docker